Error con imagenes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body> 
     <main class="background">
       <section class="card first">
-            <div class="card__image"><img src="https://svgshare.com/i/_9_.svg" alt="Car icon"></div>
+            <div class="card__image"><img src="https://i.imgur.com/z5Q6U66.png" alt="Car icon"></div>
             <div class="card__title">
               <h2>Sedans</h2>
             </div>
@@ -28,7 +28,7 @@
             </div>
       </section>
       <section class="card second">
-            <div class="card__image"><img src="https://svgshare.com/i/_96.svg" alt="Car icon"></div>
+            <div class="card__image"><img src="https://i.imgur.com/qjXOESE.png" alt="Car icon"></div>
             <div class="card__title">
               <h2>Suvs</h2>
             </div>
@@ -40,7 +40,7 @@
             </div>
       </section>
       <section class="card third">
-            <div class="card__image"><img src="https://svgshare.com/i/_9Z.svg" alt="Car icon"></div>
+            <div class="card__image"><img src="https://i.imgur.com/5qFA7hs.png" alt="Car icon"></div>
             <div class="card__title">
               <h2>Luxury</h2>
             </div>
