--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
   <body> 
     <main class="background">
       <section class="card first">
-            <div class="card__image"><img src="https://i.imgur.com/z5Q6U66.png" alt="Car icon"></div>
-            <div class="card__title">
-              <h2>Sedans</h2>
-            </div>
-            <div class="card__text">
-              <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
-            </div>
-            <div class="card__link">
-              <button>Learn More</button>
-            </div>
+        <div class="card__image"><img src="https://i.imgur.com/z5Q6U66.png" alt="Car icon"/></div>
+        <div class="card__title">
+          <h2>Sedans</h2>
+        </div>
+        <div class="card__text">
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+        </div>
+        <div class="card__link">
+          <button>Learn More</button>
+        </div>
       </section>
       <section class="card second">
-            <div class="card__image"><img src="https://i.imgur.com/qjXOESE.png" alt="Car icon"></div>
-            <div class="card__title">
-              <h2>Suvs</h2>
-            </div>
-            <div class="card__text">
-              <p>Take a SUV for its apacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-            </div>
-            <div class="card__link">
-              <button>Learn More</button>
-            </div>
+        <div class="card__image"><img src="https://i.imgur.com/qjXOESE.png" alt="Car icon"/></div>
+        <div class="card__title">
+          <h2>Suvs</h2>
+        </div>
+        <div class="card__text">
+          <p>Take a SUV for its apacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+        </div>
+        <div class="card__link">
+          <button>Learn More</button>
+        </div>
       </section>
       <section class="card third">
-            <div class="card__image"><img src="https://i.imgur.com/5qFA7hs.png" alt="Car icon"></div>
-            <div class="card__title">
-              <h2>Luxury</h2>
-            </div>
-            <div class="card__text">
-              <p>Cruise in the best car brands whitout the bloated prices. Enjoy the enchanced comfort of a luxury rental and arrive in style.</p>
-            </div>
-            <div class="card__link">
-              <button>Learn More</button>
-            </div>
+        <div class="card__image"><img src="https://i.imgur.com/5qFA7hs.png" alt="Car icon"/></div>
+        <div class="card__title">
+          <h2>Luxury</h2>
+        </div>
+        <div class="card__text">
+          <p>Cruise in the best car brands whitout the bloated prices. Enjoy the enchanced comfort of a luxury rental and arrive in style.</p>
+        </div>
+        <div class="card__link">
+          <button>Learn More</button>
+        </div>
       </section>
     </main>
     <div class="attribution"> 
